# mvp-data-pipeline-aws

./: .gitignore  README.md  cdk.json  cdk.py  pyproject.toml
.github/workflows/: cdk_deploy.yml
jupyter/: analyse.ipynb  api_tests.ipynb
src/lambda_code/api_gw_lambda/: main.py
src/stacks/: pipeline_stack.py
